--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "electron": "ng build --base-href ./ && electron main.js"
   },
+  "main": "main.ts",
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
@@ -28,6 +30,8 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "axios": "^0.27.2",
+    "electron": "^20.1.4",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
